aerolase/force-app/main/default/objects/User/fields/Cadence_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Opt_In__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When Leads are automatically added to Cadences, this determines if your Leads are included.</inlineHelpText>
    <label>Cadence Opt-In</label>
    <type>Checkbox</type>
</CustomField>