aerolase/force-app/main/default/objects/User/fields/Date_Laser_Returned__c.field-meta.xml
<CustomField>
    <fullName>Date_Laser_Returned__c</fullName>
    <label>Date Laser Returned</label>
    <type>Date</type>
</CustomField>