aerolase/force-app/main/default/objects/User/fields/Demos_Completed_Goal__c.field-meta.xml
<CustomField>
    <fullName>Demos_Completed_Goal__c</fullName>
    <formula>CASE( TEXT(Sales_Team__c),
&quot;Central&quot;, 8 * 5,
&quot;Organization&quot;, 8 * 30,
&quot;Southeast&quot;, 8 * 6,
&quot;NY&quot;, 8 * 3,
&quot;West&quot;, 8 * 4,
&quot;National&quot;, 8 * 2,
&quot;East&quot;, 8 * 6,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demos Completed Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>