aerolase/force-app/main/default/objects/User/fields/Laser_Serial__c.field-meta.xml
<CustomField>
    <fullName>Laser_Serial__c</fullName>
    <label>Laser Serial #</label>
    <type>TextArea</type>
</CustomField>