aerolase/force-app/main/default/objects/User/listViews/Sales_People.listView-meta.xml
<ListView>
    <fullName>Sales_People</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.CELL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Cadence_Opt_In__c</columns>
    <columns>Sales_Team__c</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Sales_Team__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Sales People</label>
</ListView>